flower-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: flower-ingress

spec:
  rules:
  - host: flowers.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: frontend-service

            port:
              number: 80
